2013-04-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(SECURITY_PATCHES): Correct path to 7036559; not
	a security patch but a backport to enable one to
	be applied.
	* patches/security/20130416/7036559.patch: Moved to...
	* patches/openjdk/7036559-concurrenthashmap_improvements.patch:
	...here.

2013-04-11  Jon VanAlten  <jon.vanalten@redhat.com>

	* Makefile.am:
	(SECURITY_PATCHES): Add new patches.
	* patches/security/20130416/7036559.patch: Add backport.
	* patches/security/20130416/8009063.patch: Add security fix.

2013-04-22  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1336: Bootstrap failure on Fedora 17/18
	* Makefile.am:
	(ICEDTEA_BOOTSTRAP_CLASSES): Add SSLContext,
	SSLEngine, TrustAnchor and KeyStoreBuilderParameters
	depending on if methods are missing.
	* NEWS: Updated.
	* configure.ac: Mention bugs in comments.
	Add tests for getDefaultSSLParameters/setSSLParameters,
	new TrustAnchor constructor, TrustAnchor.getCA() and
	KeyStoreBuilderParameters.getParameters().

2013-04-17  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(EXTRA_DIST): Remove THANKYOU.

2013-04-17  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add patch after SH patch.
	* NEWS: Updated.
	* AUTHORS: Add Andreas and merge in THANKYOU.
	* THANKYOU: Removed.

2013-03-22  Andreas Schwab  <schwab@suse.cz>

	PR1380: Add AArch64 support to Zero
	* patches/aarch64.patch:
	Add Zero support for AArch64.

2013-04-16  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add missing backslash (oops!)
	* patches/openjdk/7024568-long_method_resolution_oom_error.patch:
	Fix patch that doesn't apply cleanly.

2013-03-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1339: Simplify the rewriter, avoiding concurrency.
	* rewriter/com/redhat/rewriter/ClassRewriter.java:
	Always use the single threaded executor.
	* NEWS: Updated with this and previous fix.
