@@ -1,3 +1,10 @@
+2013-04-25  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	* Makefile.am:
+	(ICEDTEA_PATCHES): Move aarch64.patch to original
+	HotSpot only.
+	* hotspot.map: Sync with latest hs23 HEAD.
+
 2013-04-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	* Makefile.am:
